// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddBlockForm: Component should render a block template with added elements 1`] = `
.c7 {
  height: 120px;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c8 {
  bottom: 0;
  width: 100%;
  padding: 10px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  z-index: 999;
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c10 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c5 {
  text-align: right;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  padding-right: 30px;
  position: relative;
  font-size: 18px;
  cursor: pointer;
}

.c1 label {
  margin-bottom: 2px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 5px;
}

.c3 {
  color: #71737e;
  text-align: center;
  padding-bottom: 20px;
  min-height: 43px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c4 {
  width: 33%;
}

@media (min-width:1050px) {
  .c0 {
    margin-top: -20px;
  }
}

@media (min-width:1050px) {
  .c7 {
    height: 100px;
  }
}

@media (min-width:1050px) {
  .c9 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c8 {
    position: fixed;
    width: calc(100% - 40px);
    z-index: 999;
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    padding: 10px 0 36px;
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c10 {
    width: 240px;
  }
}

@media (min-width:1050px) {
  .c6 {
    display: block;
  }
}

@media (min-width:1050px) {
  .c3 {
    margin-top: 0px;
    padding-bottom: 40px;
  }
}

@media (min-width:768px) {

}

<form
  onSubmit={[Function]}
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Type
      </label>
      <input
        id="type"
        name="type"
        type="hidden"
        value={0}
      />
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          id="blockTypeSelect"
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                }
              }
            >
              (blank)
            </div>
          </div>
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "184px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 99,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "backgroundColor": "#FFF",
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#000",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              (blank)
            </div>
            <div
              id="select-item-1"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name
            </div>
            <div
              id="select-item-2"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 2
            </div>
            <div
              id="select-item-3"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 3
            </div>
          </div>
        </div>
      </div>
      <div
        className="c2"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
      id="tagsCounter"
    />
    0 Elements
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <div
          className="c6"
        >
          <button
            disabled={false}
            id="createElement"
            onClick={[Function]}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "#FFF",
                "border": "none",
                "borderRadius": "30px",
                "color": "#000",
                "cursor": "pointer",
                "display": "flex",
                "fill": "#FFF",
                "fontSize": "20px",
                "height": 40,
                "justifyContent": "center",
                "margin": "0",
                "minHeight": 40,
                "outline": "none",
                "padding": "0",
                "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
                "width": 40,
              }
            }
            type="button"
          >
            <svg
              style={
                Object {
                  "fill": "#000",
                  "height": 40,
                  "minHeight": 40,
                  "shapeRendering": "crispEdges",
                  "width": 40,
                }
              }
              viewBox="0 0 60 60"
            >
              <path
                d="M32 15v13h13v4H32v13h-4V32H15v-4h13V15h4z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
  <span>
     
  </span>
  <div
    className="c7"
  >
    <div
      className="c8"
    >
      <div
        className="c9"
      >
        <button
          className="c10"
          disabled={false}
          id="backBtn"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          Back
        </button>
        <button
          className="c10"
          disabled={true}
          id="addBlock"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#71737e",
              "cursor": "default",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="submit"
        >
          Add
        </button>
      </div>
    </div>
  </div>
</form>
`;

exports[`AddBlockForm: Component should render correctly 1`] = `
.c3 {
  height: 120px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c4 {
  bottom: 0;
  width: 100%;
  padding: 10px 0 36px;
  position: fixed;
  width: calc(100% - 40px);
  z-index: 999;
  background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
}

.c6 {
  width: calc(50% - 5px);
  max-width: 240px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 30px;
  padding-right: 30px;
  position: relative;
  font-size: 18px;
  cursor: pointer;
}

.c1 label {
  margin-bottom: 2px;
}

.c2 {
  position: absolute;
  right: 0;
  top: 5px;
}

@media (min-width:1050px) {
  .c0 {
    margin-top: -20px;
  }
}

@media (min-width:1050px) {
  .c3 {
    height: 100px;
  }
}

@media (min-width:1050px) {
  .c5 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
  }
}

@media (min-width:1050px) {
  .c4 {
    position: fixed;
    width: calc(100% - 40px);
    z-index: 999;
    background-image: linear-gradient( to top, #000,#000 30%, rgba(0,0,0,0) );
    padding: 10px 0 36px;
    width: 1000px;
  }
}

@media (min-width:1050px) {
  .c6 {
    width: 240px;
  }
}

@media (min-width:768px) {

}

<form
  onSubmit={[Function]}
>
  <div
    className="c0"
  >
    <div
      className="c1"
      onClick={[Function]}
    >
      <label
        id="fieldProjectStatusLabel"
        style={
          Object {
            "border": "none",
            "borderTop": "2px solid #2F2F36",
            "color": "#71737e",
            "display": "block",
            "fontSize": "14px",
            "outline": "none",
            "paddingTop": "8px",
            "width": "100%",
          }
        }
      >
        Block Type
      </label>
      <input
        id="type"
        name="type"
        type="hidden"
        value=""
      />
      <div
        style={
          Object {
            "color": "#FFF",
            "display": "flex",
            "width": "100%",
          }
        }
      >
        <div
          id="blockTypeSelect"
          style={
            Object {
              "cursor": "pointer",
              "display": "flex",
              "position": "relative",
              "width": "100%",
            }
          }
        >
          <div
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
                "display": "flex",
                "width": "100%",
              }
            }
          >
            <div
              style={
                Object {
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                  "width": "100%",
                }
              }
            >
              Please select a type
            </div>
          </div>
          <div
            style={
              Object {
                "WebkitOverflowScrolling": "touch",
                "backgroundColor": "#1d1d20",
                "display": "none",
                "flexDirection": "column",
                "left": "0",
                "maxHeight": "184px",
                "overflowY": "hidden",
                "position": "absolute",
                "top": "calc(100% + 5px)",
                "width": "100%",
                "zIndex": 99,
              }
            }
          >
            <div
              id="select-item-0"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "1px solid  #2F2F36",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              (blank)
            </div>
            <div
              id="select-item-1"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name
            </div>
            <div
              id="select-item-2"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 2
            </div>
            <div
              id="select-item-3"
              onClick={[Function]}
              onMouseOut={[Function]}
              onMouseOver={[Function]}
              style={
                Object {
                  "border": "1px solid  #2F2F36",
                  "borderTop": "none",
                  "color": "#71737e",
                  "cursor": "pointer",
                  "overflow": "hidden",
                  "padding": "20px 10px",
                  "textOverflow": "ellipsis",
                  "whiteSpace": "nowrap",
                }
              }
            >
              block name 3
            </div>
          </div>
        </div>
      </div>
      <div
        className="c2"
      >
        <svg
          style={
            Object {
              "fill": "#FFF",
              "height": "30px",
              "width": "30px",
            }
          }
          viewBox="0 0 30 30"
        >
          <path
            d="M15.117 18L9 12h12z"
            fillRule="evenodd"
          />
        </svg>
      </div>
    </div>
  </div>
  <div
    className="c3"
  >
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <button
          className="c6"
          disabled={false}
          id="backBtn"
          onClick={[Function]}
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#FFF",
              "cursor": "pointer",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="button"
        >
          Back
        </button>
        <button
          className="c6"
          disabled={true}
          id="addBlock"
          style={
            Object {
              "alignItems": "center",
              "backgroundColor": "#1d1d20",
              "border": "none",
              "borderRadius": "30px",
              "color": "#71737e",
              "cursor": "default",
              "display": "flex",
              "fill": "#FFF",
              "fontSize": "20px",
              "justifyContent": "center",
              "margin": "0",
              "minHeight": "48px",
              "outline": "none",
              "padding": "0",
              "transition": "background 0.25s ease-in-out, color 0.25s ease-in-out",
            }
          }
          type="submit"
        >
          Add
        </button>
      </div>
    </div>
  </div>
</form>
`;
